add strategies for update and delete; add method to add book to user; add method to delete book from user; refactor book service and tests